<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_tenth_scene"
    tools:context=".TenthActivity">

    <ImageView
        android:id="@+id/moon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/moon"
        android:tint="?colorOnPrimary"
        app:srcCompat="@drawable/moon" />

    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textColor="?colorOnPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/swipe_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipeToTheRight" />

</androidx.constraintlayout.motion.widget.MotionLayout>